Can now show similar cities upon city selection

--- a/shiny/www/bootstrap.css
+++ b/shiny/www/bootstrap.css
@@ -2,3 +2,6 @@ body {
     background-image: url(/home/ubuntu/awaygoing/shiny/viz/tampa.slice.jpg");
     background-color: white;
 }
+table {
+    border-collapse:collapse;
+}
