--- a/shiny/www/bootstrap.css
+++ b/shiny/www/bootstrap.css
@@ -1,10 +1,15 @@
 @import url("MyFontsWebfontsKit.css");
 @import url("NewsLab.css");
 
+.title {
+	color:green;
+}
+
 h1, h2, h3, h4 { 
 	font-family: RBNo21a-BlackDEMO; 
 	font-weight: normal; 
-	font-style: normal; 
+	font-style: normal;
+	color:green; 
 }
 
 body, h5 { 
